...
            <Text className="text-white text-center font-irishGrover self-center max-w-56">Transforme a cidade em uma aventura</Text>
          </View>

          <View className="w-full gap-6">
            <View className="gap-6">
              <Link href={"/user/(public)/auth/user-login"} className="border-[#EAAA6A] border-2 p-3 rounded-3xl items-center active:opacity-50">
                <Text className="font-itim text-lg text-center text-white">Continuar como aventureiro</Text>
              </Link>
      
              <View className="flex-row justify-center items-center gap-3">
                <View className="w-1/3 h-px bg-white" />
                <Text className="text-white font-itim">Ou</Text>
                <View className="w-1/3 h-px bg-white" />
              </View>

              <Link href={"/shopkeeper/(public)/auth/shopkeeper-signup"} className="bg-white p-3 rounded-3xl items-center flex-row gap-2 justify-center active:opacity-70">
                <Text className="font-itim text-lg text-center">Continuar como comerciante</Text>
              </Link>
            </View>
          </View>
        </View>
      </ScrollView>
    </ImageBackground>
...
