...
            }}
          />

          <Tabs.Screen
            name="catalog"
            options={{
              title: "Catálogo",
              tabBarIcon: ({ focused }: { focused: boolean }) => (
                <Ionicons name="cube" size={20} color="#555" style={{ opacity: focused ? 1 : 0.5 }} />
              )
            }}
          />

...
